--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -11,6 +11,7 @@ lib_libtunitas_la_SOURCES = \
   obj/src/tunitas/app/Program.cpp \
   \
   obj/src/tunitas/app/exception.Generic.cpp \
+  obj/src/tunitas/app/exception.Messaging.cpp \
   obj/src/tunitas/app/exception.Quitting.cpp \
   obj/src/tunitas/app/exception.Usage.cpp \
   obj/src/tunitas/app/exception.Version.cpp \
