--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -1,7 +1,25 @@
 # -*- Makefile -*-
 
+# DSO API versioning; see the README which is nearby.
+#
+#   CURRENT <= CURRENT+1 if any interfaces were added, removed, changed
+#           <= CURRENT   if no interface change, but any other (source code) change
+#
+#   REVISION <= 0          if any interfaces were added, removed, changed
+#               REVISION+1 if no interface change, but any other (source code) change
+#
+#   AGE <= AGE+1 if any interaces were added
+#       <= 0     if any interfaces were removed, changed
+#       <= AGE   if no interface change, but any other (source code) change
+#
+lib_libtunitas_la_CURRENT = 2
+lib_libtunitas_la_REVISION = 0
+lib_libtunitas_la_AGE = 0
+lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
+
 lib_libtunitas_la = lib/libtunitas.la
-lib_libtunitas_la_LIBADD = -loptions-module -lsys-module
+lib_libtunitas_la_LDFLAGS = $(PACKAGE_LDFLAGS_SET) -version-info $(lib_libtunitas_la_CRA)
+lib_libtunitas_la_LIBADD = -loptions-module -lsys-module $(lib_libwant_la)
 lib_libtunitas_la_MODULES = $(call TF_SOURCEStoMODULES, $(lib_libtunitas_la_SOURCES))
 lib_libtunitas_la_SOURCES = \
   obj/src/tunitas/namespace.cpp \
@@ -27,8 +45,7 @@ lib_libtunitas_la_SOURCES = \
   $(end)
 
 $(scold_cxxdir)/tunitas/dependencies.mk:
-	$(AM_V_BB1ST) $(call TF_DISAGGREGATE_COMPILE, $(lib_libtunitas_la_SOURCES))
-	$(AM_V_BB2ND) $(call TF_DEPENDENCIES_COMPILE, $(lib_libtunitas_la_SOURCES))
+	$(AM_V_TFDC) $(call TF_DISAGGREGATE, $(lib_libtunitas_la_SOURCES))
 	test -e $@
 include $(scold_cxxdir)/tunitas/dependencies.mk
 clean-dependencies::
