--- a/tests/unit/Makefrag.am
+++ b/tests/unit/Makefrag.am
@@ -6,6 +6,8 @@ tests_unit_TESTS = \
   tests/unit/list.test \
   tests/unit/all.test \
   tests/unit/want.test \
+  tests/unit/outcome.test \
+  tests/unit/required.test \
   tests/unit/tunitas.test \
   tests/unit/app.test \
   $(end)
