--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -20,6 +20,9 @@ bin_unit_SOURCES = \
   obj/src/tests/unit/app.Fixture.Specification.cpp \
   obj/src/tests/unit/app.Fixture.Usage.cpp \
   obj/src/tests/unit/app.Fixture.Version.cpp \
+  obj/src/tests/unit/outcome.Fixture.cpp \
+  obj/src/tests/unit/outcome.Fixture.Uncopyable.cpp \
+  obj/src/tests/unit/outcome.Usage.cpp \
   obj/src/tests/unit/required.Fixture.cpp \
   obj/src/tests/unit/tunitas.Fixture.cpp \
   obj/src/tests/unit/want.Fixture.cpp \
