--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -13,7 +13,7 @@
 #       <= AGE   if no interface change, but any other (source code) change
 #
 lib_libtunitas_la_CURRENT = 2
-lib_libtunitas_la_REVISION = 1
+lib_libtunitas_la_REVISION = 2
 lib_libtunitas_la_AGE = 0
 lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
 
@@ -46,6 +46,8 @@ lib_libtunitas_la_SOURCES = \
   obj/src/tunitas/app/options.cpp \
   obj/src/tunitas/app/options.Args.cpp \
   obj/src/tunitas/app/options.Specification.cpp \
+  obj/src/tunitas/app/options.get_port.cpp \
+  \
   obj/src/tunitas/app/words.cpp \
   obj/src/tunitas/app/words.Filepaths.cpp \
   obj/src/tunitas/app/words.Strings.cpp \
