--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -11,8 +11,18 @@ bin_unit_LDADD = \
 bin_unit_LDFLAGS = $(AM_LDFLAGS)
 bin_unit_MODULES = $(call TF_SOURCEStoMODULES, $(bin_unit_SOURCES))
 bin_unit_SOURCES = \
+  obj/src/tunitas/base64/Encoder.test.Access.cpp \
+  obj/src/tunitas/base64/Decoder.test.Access.cpp \
+  \
   obj/src/tests/unit/main.cpp \
   obj/src/tests/unit/namespace.cpp \
+  obj/src/tests/unit/UNREACHABLE.cpp \
+  \
+  obj/src/tests/unit/for_each/namespace.cpp \
+  obj/src/tests/unit/for_each/Counter.cpp \
+  obj/src/tests/unit/for_each/counter.Iterator.cpp \
+  obj/src/tests/unit/for_each/count.cpp \
+  \
   obj/src/tests/unit/app.Fixture.cpp \
   obj/src/tests/unit/app.Fixture.Configuration.cpp \
   obj/src/tests/unit/app.Fixture.Messaging.cpp \
@@ -21,12 +31,27 @@ bin_unit_SOURCES = \
   obj/src/tests/unit/app.Fixture.Usage.cpp \
   obj/src/tests/unit/app.Fixture.Version.cpp \
   obj/src/tests/unit/app.options.Fixture.cpp \
+  \
+  obj/src/tests/unit/base64/namespace.cpp \
+  obj/src/tests/unit/base64/Fixture.cpp \
+  obj/src/tests/unit/base64/Roundtrip.cpp \
+  obj/src/tests/unit/base64/Encode.cpp \
+  obj/src/tests/unit/base64/Decode.cpp \
+  obj/src/tests/unit/base64/decoder/namespace.cpp \
+  obj/src/tests/unit/base64/decoder/Fixture.cpp \
+  obj/src/tests/unit/base64/encoder/namespace.cpp \
+  obj/src/tests/unit/base64/encoder/Fixture.cpp \
+  obj/src/tests/unit/base64/exception/namespace.cpp \
+  obj/src/tests/unit/base64/exception/Fixture.cpp \
+  \
   obj/src/tests/unit/outcome.Fixture.cpp \
   obj/src/tests/unit/outcome.Fixture.Uncopyable.cpp \
   obj/src/tests/unit/outcome.Usage.cpp \
+  \
   obj/src/tests/unit/required.Fixture.cpp \
   obj/src/tests/unit/server.Fixture.cpp \
   obj/src/tests/unit/tunitas.Fixture.cpp \
+  \
   obj/src/tests/unit/want.Fixture.cpp \
   obj/src/tests/unit/want.nonstd.Fixture.cpp \
   $(end)
