--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -12,9 +12,9 @@
 #       <= 0     if any interfaces were removed, changed
 #       <= AGE   if no interface change, but any other (source code) change
 #
-lib_libtunitas_la_CURRENT = 4
+lib_libtunitas_la_CURRENT = 5
 lib_libtunitas_la_REVISION = 0
-lib_libtunitas_la_AGE = 0
+lib_libtunitas_la_AGE = 2
 lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
 
 lib_libtunitas_la = lib/libtunitas.la
@@ -78,6 +78,14 @@ lib_libtunitas_la_SOURCES = \
   \
   obj/src/tunitas/Outcome.cpp \
   obj/src/tunitas/outcome.Success.cpp \
+  \
+  obj/src/tunitas/urlsafe/namespace.cpp \
+  obj/src/tunitas/urlsafe/detail.cpp \
+  obj/src/tunitas/urlsafe/Code.cpp \
+  obj/src/tunitas/urlsafe/Exception.cpp \
+  obj/src/tunitas/urlsafe/decode.cpp \
+  obj/src/tunitas/urlsafe/decoder.Invalid.cpp \
+  obj/src/tunitas/urlsafe/encode.cpp \
   $(end)
 
 $(scold_cxxdir)/tunitas/dependencies.mk:
