--- a/src/tunitas/server/Makefrag.am
+++ b/src/tunitas/server/Makefrag.am
@@ -12,9 +12,9 @@
 #       <= 0     if any interfaces were removed, changed
 #       <= AGE   if no interface change, but any other (source code) change
 #
-lib_libtunitas_server_la_CURRENT = 1
+lib_libtunitas_server_la_CURRENT = 2
 lib_libtunitas_server_la_REVISION = 0
-lib_libtunitas_server_la_AGE = 0
+lib_libtunitas_server_la_AGE = 1
 lib_libtunitas_server_la_CRA = $(lib_libtunitas_server_la_CURRENT):$(lib_libtunitas_server_la_REVISION):$(lib_libtunitas_server_la_AGE)
 
 lib_libtunitas_server_la = lib/libtunitas-server.la
@@ -23,6 +23,7 @@ lib_libtunitas_server_la_LIBADD = -lhttpserver -ltunitas $(lib_libwant_la)
 lib_libtunitas_server_la_MODULES = $(call TF_SOURCEStoMODULES, $(lib_libtunitas_server_la_SOURCES))
 lib_libtunitas_server_la_SOURCES = \
   obj/src/tunitas/server/namespace.cpp \
+  obj/src/tunitas/server/exception.Generic.cpp \
   obj/src/tunitas/server/required.Stringable.cpp \
   obj/src/tunitas/server/required.Resourceful.cpp \
   obj/src/tunitas/server/constants.cpp \
