--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -17,9 +17,9 @@
 #       <= 0     if any interfaces were changed
 #       <= AGE   if no interface change, but any other (source code) change
 #
-lib_libtunitas_la_CURRENT = 6
+lib_libtunitas_la_CURRENT = 7
 lib_libtunitas_la_REVISION = 0
-lib_libtunitas_la_AGE = 3
+lib_libtunitas_la_AGE = 4
 lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
 
 lib_libtunitas_la = lib/libtunitas.la
@@ -54,7 +54,10 @@ lib_libtunitas_la_SOURCES = \
   obj/src/tunitas/app/options.cpp \
   obj/src/tunitas/app/options.Args.cpp \
   obj/src/tunitas/app/options.Specification.cpp \
+  obj/src/tunitas/app/options.get_filepath.cpp \
+  obj/src/tunitas/app/options.get_identifier.cpp \
   obj/src/tunitas/app/options.get_port.cpp \
+  obj/src/tunitas/app/options.get_word.cpp \
   \
   obj/src/tunitas/app/words.cpp \
   obj/src/tunitas/app/words.Filepaths.cpp \
