--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -18,7 +18,7 @@
 #       <= AGE   if no interface change, but any other (source code) change
 #
 lib_libtunitas_la_CURRENT = 7
-lib_libtunitas_la_REVISION = 0
+lib_libtunitas_la_REVISION = 1
 lib_libtunitas_la_AGE = 4
 lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
 
@@ -45,11 +45,12 @@ lib_libtunitas_la_SOURCES = \
   obj/src/tunitas/app/Configuration.cpp \
   obj/src/tunitas/app/Program.cpp \
   \
-  obj/src/tunitas/app/exception.Generic.cpp \
-  obj/src/tunitas/app/exception.Messaging.cpp \
-  obj/src/tunitas/app/exception.Quitting.cpp \
-  obj/src/tunitas/app/exception.Usage.cpp \
-  obj/src/tunitas/app/exception.Version.cpp \
+  obj/src/tunitas/app/exception/namespace.cpp \
+  obj/src/tunitas/app/exception/Generic.cpp \
+  obj/src/tunitas/app/exception/Messaging.cpp \
+  obj/src/tunitas/app/exception/Quitting.cpp \
+  obj/src/tunitas/app/exception/Usage.cpp \
+  obj/src/tunitas/app/exception/Version.cpp \
   \
   obj/src/tunitas/app/options.cpp \
   obj/src/tunitas/app/options.Args.cpp \
