--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -17,9 +17,9 @@
 #       <= 0     if any interfaces were changed
 #       <= AGE   if no interface change, but any other (source code) change
 #
-lib_libtunitas_la_CURRENT = 8
+lib_libtunitas_la_CURRENT = 9
 lib_libtunitas_la_REVISION = 0
-lib_libtunitas_la_AGE = 5
+lib_libtunitas_la_AGE = 6
 lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
 
 lib_libtunitas_la = lib/libtunitas.la
@@ -40,10 +40,14 @@ lib_libtunitas_la_SOURCES = \
   obj/src/tunitas/required/Move_Constructible.cpp \
   obj/src/tunitas/required/Default_Constructible.cpp \
   obj/src/tunitas/required/Outcomable.cpp \
+  obj/src/tunitas/required/exception/namespace.cpp \
+  obj/src/tunitas/required/exception/app.Quitting.cpp \
   \
   obj/src/tunitas/app/namespace.cpp \
   obj/src/tunitas/app/Configuration.cpp \
   obj/src/tunitas/app/Program.cpp \
+  obj/src/tunitas/app/Pidfile.cpp \
+  obj/src/tunitas/app/drop.cpp \
   \
   obj/src/tunitas/app/exception/namespace.cpp \
   obj/src/tunitas/app/exception/Generic.cpp \
