more copyright badging

--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -1,4 +1,7 @@
-# -*- Makefile -*-
+# This is a GNU -*- Makefile -*- fragment that is included by Automake
+# Copyright 2018-2019, Oath Inc.
+# Licensed under the terms of the Apache-2.0 license.
+# See the LICENSE file in https://github.com/yahoo/tunitas-basics/blob/master/LICENSE for terms.
 
 check_bin_unit = check/bin/unit
 check_bin_unit_LDADD = \
