--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
-# -*- Makefile -*-
-# Copyright 2019, Oath Inc.
-# Licensed under the terms of the Apache-2.0 license. See LICENSE file in https://github.com/yahoo/tunitas-basics/blob/master/LICENSE for terms.
+# This is a GNU -*- Makefile -*- fragment that is included by Automake
+# Copyright 2018-2019, Oath Inc.
+# Licensed under the terms of the Apache-2.0 license.
+# See the LICENSE file in https://github.com/yahoo/tunitas-basics/blob/master/LICENSE for terms.
 
 # silent-rules has no effect, see configure.ac
 # cannot -Wall -Werror
