--- a/src/tests/urlsafe/Makefrag.am
+++ b/src/tests/urlsafe/Makefrag.am
@@ -1,4 +1,7 @@
-# -*- Makefile -*-
+# This is a GNU -*- Makefile -*- fragment that is included by Automake
+# Copyright 2018-2019, Oath Inc.
+# Licensed under the terms of the Apache-2.0 license.
+# See the LICENSE file in https://github.com/yahoo/tunitas-basics/blob/master/LICENSE for terms.
 
 check_lib_libtests_urlsafe_la = check/lib/libtests-urlsafe.la
 check_lib_libtests_urlsafe_la_LIBADD = $(lib_libtunitas_la)
