Makefile.am, License badging

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-# -*- Makefile -*-
+# This is a GNU -*- Makefile -*- which is managed by automake.
 # Copyright 2019, Oath Inc.
 # Licensed under the terms of the Apache-2.0 license. See LICENSE file in https://github.com/yahoo/tunitas-basics/blob/master/LICENSE for terms.
 
