--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -21,9 +21,9 @@
 #       <= 0     if any interfaces were changed
 #       <= AGE   if no interface change, but any other (source code) change
 #
-lib_libtunitas_la_CURRENT = 10
+lib_libtunitas_la_CURRENT = 11
 lib_libtunitas_la_REVISION = 0
-lib_libtunitas_la_AGE = 7
+lib_libtunitas_la_AGE = 8
 lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
 
 lib_libtunitas_la = lib/libtunitas.la
@@ -94,6 +94,7 @@ lib_libtunitas_la_SOURCES = \
   obj/src/tunitas/base64/sized.ByValue.cpp \
   \
   obj/src/tunitas/Outcome.cpp \
+  obj/src/tunitas/Success.cpp \
   obj/src/tunitas/outcome/namespace.cpp \
   obj/src/tunitas/outcome/Success.cpp \
   obj/src/tunitas/outcome/Variant.cpp \
