--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -5,6 +5,8 @@
 
 check_bin_unit = check/bin/unit
 check_bin_unit_LDADD = \
+  $(lib_libtunitas_server_la) \
+  $(lib_libtunitas_app_la) \
   $(lib_libtunitas_la) \
   $(lib_libwant_la) \
   -lrigging-bench-module \
